# StudentManagement

StudentManagement_new_2/: Binarysearch.h  CMakeLists.txt  Chinese.cpp  Chinese.h  ChineseFactory.cpp  ChineseFactory.h  Client_protobuf.h  Compulsory.cpp  Compulsory.h  Operation.cpp  Operation.h  Quicksort.h  README.md  Student.cpp  Student.h  Subject.cpp  Subject.h  Teacher.cpp  Teacher.h  main.cpp  main_adaptor.cpp
StudentManagement_new_2/stout/tests/os/: process_tests.cpp
